<resources>
    <string name="app_name">Inventory App</string>

    <!-- ***********************   STRINGS FOR EDITOR ACTIVITY     ******************       -->
    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>
    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit product</string>
    <!-- Message of email -->
    <string name="email_message1">Dear,</string>
    <string name="email_message">We are requesting a shipment of the following item:</string>
    <!-- Subject for email -->
    <string name="email_subject">Order Request from safaa</string>
    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>
    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>
    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated</string>
    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>
    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>
    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>
    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>
    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>


    <!-- ***********************   STRINGS FOR PRODUCT_CURSOR_ADAPTER     ******************       -->
    <!-- Toast message in main when current product was minus [CHAR LIMIT=NONE] -->
    <string name="Toat">You cannot have less than 1 product</string>

    <!-- ***********************   STRINGS FOR Activity_Main.xml     ******************       -->

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- ***********************   STRINGS FOR editor_Activity.xml     ******************       -->

    <string name="choose_image">Choose Image</string>
    <string name="product_name">Product Name:</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="quantity">Quantity:</string>
    <string name="hint_supplier_email">Email</string>
    <string name="decrement_name">-</string>
    <string name="increment_name">+</string>
    <string name="product_price">Product Price:</string>
    <string name="product_quantity">Product Quantity:</string>
    <string name="supplier_email">Supplier Email:</string>
    <string name="make_order">Make Order</string>

    <!-- ***********************   STRINGS FOR list_item.xml     ******************       -->
    <string name="sale">sell</string>

    <!-- ***********************   STRINGS FOR MENU     ******************       -->
    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>
    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>
    <!-- Label for overflow menu option that deletes all Product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products </string>


</resources>
