<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".EditorActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/ic_launcher"/>

        <Button
            android:id="@+id/chooseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Choose Image"
            android:layout_gravity="center"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">
        <TextView
            style="@style/EditorUnitsStyle"
            android:text="Product Name:"
            android:textColor="#e60422"/>

        <EditText
            android:id="@+id/edit_product_name"
            android:layout_height="wrap_content"
            android:hint="@string/hint_product_name"
            android:inputType="text"
            style="@style/EditorFieldStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">
        <TextView
            style="@style/EditorUnitsStyle"
            android:text="Product Price:"
            android:textColor="#e60422"/>

        <EditText
            android:id="@+id/edit_product_price"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hint_product_price"
            style="@style/EditorFieldStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">
        <TextView
            style="@style/EditorUnitsStyle"
            android:text="Product Quantity:"
            android:textColor="#e60422"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">
            <Button
                android:id="@+id/decrement_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="48dp"
                android:text="@string/decrement_name"
                android:textSize="20sp"
                android:textColor="#000000"
                android:visibility="gone"
                />
            <EditText
                android:id="@+id/edit_product_quantity"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/hint_product_quantity"
                android:layout_gravity="center"
                android:gravity="center"
                android:inputType="number"
                />
            <Button
                android:id="@+id/increment_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="48dp"
                android:text="@string/increment_name"
                android:textSize="20sp"
                android:textColor="#000000"
                android:visibility="gone"
                android:onClick="increment"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">
        <TextView
            style="@style/EditorUnitsStyle"
            android:text="Supplier Email:"
            android:textColor="#e60422"/>

        <EditText
            android:id="@+id/edit_product_supplier"
            android:layout_height="wrap_content"
            android:hint="@string/hint_supplier_email"
            android:inputType="text"
            style="@style/EditorFieldStyle"/>
    </LinearLayout>
    <Button
        android:layout_marginTop="30dp"
        android:paddingTop="10dp"
        android:id="@+id/orderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Make Order"
        android:visibility="gone"
        android:layout_gravity="center"/>
</LinearLayout>